# agentshield

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_RATIONALE.md  ARCHITECTURE_V2.md  COPILOT_LLM_SCAN_USAGE.md  EXECUTE_AGENTSHIELD.md  F8_VALIDATION.md  GLOSSARY.md  INSTALL.md  LLM_JUDGE_DESIGN.md  PHASE_B_TRIAGE.md  PHASE_C_TRIAGE.md  PHASE_D_TRIAGE.md  PHASE_I_PLAN.md  QUICKSTART.md  QUICKSTART_VDI.md  README.md  REMEDIATION_PATTERNS.md  REQUIREMENTS.md  ROADMAP.md  RULES_COVERAGE.md  SPEAKER_NOTES.md  TESTBED_VALIDATION.md  TIER2_USAGE.md  TIER_FLOWS.md  VDI_TESTING.md  project.md  pyproject.toml  research.md  run_tier1.ps1
agentshield/: __init__.py  cli.py
agentshield/_retired_v2/: README.md
agentshield/discovery/: __init__.py
agentshield/emitter/: __init__.py  entry_point_scanner.py  skill_emitter.py
agentshield/frameworks/: agentshield_v1.yaml  owasp_llm.yaml
agentshield/judge/: __init__.py  backend.py  boto3_bedrock.py  mock_backend.py  orchestrator.py  prompts.py  source_window.py  types.py
agentshield/manifest_scanner/: __init__.py  parser.py  rules.py  scanner.py
agentshield/merger/: __init__.py  attack_narratives.py  combine.py  coverage_universe.py  reference.py  schema.py
agentshield/normalize/: __init__.py  normalizer.py  schema.py
agentshield/probe/: __init__.py  campaign.py  classifier.py  explore.py  harness.py  llm_classifier.py  orchestrator.py  payloads.py  profiles.py  runner.py  schema.py  synthesis.py  target_adapter.py
agentshield/report/: __init__.py  json_writer.py  markdown.py  sarif.py
agentshield/rules/defend/: DF001-no-guardrails-import-in-llm-module-java.yaml  DF001-no-guardrails-import-in-llm-module.yaml  DF002-tool-without-args-schema.yaml  DF003-no-timeout-or-token-cap-on-llm-java.yaml  DF003-no-timeout-or-token-cap-on-llm.yaml  DF004-destructive-tool-without-human-approval.yaml
agentshield/rules/detect/: D001-fallback-llm-import-and-verb-shape-java.yaml  D001-fallback-llm-import-and-verb-shape.yaml  D001-unsanitized-user-input-to-llm-java.yaml  D001-unsanitized-user-input-to-llm.yaml  D002-untrusted-document-loader-to-rag.yaml  D003-code-execution-tool-registered-java.yaml  D003-code-execution-tool-registered.yaml  D004-llm-output-to-code-execution-java.yaml  D004-llm-output-to-code-execution.yaml  D005-hardcoded-llm-credentials-java.yaml  (+12 more)
agentshield/runner/: __init__.py  semgrep_runner.py
agentshield/skills/: _build_fix_skills.py  agent_emulator_bootstrap.md.tmpl  agent_emulator_instructions.md.tmpl  agent_emulator_output_schema.md.tmpl  agentshield_copilot_fixes.md  agentshield_manifest_fixes.md  agentshield_semgrep_fixes.md  redteam_judge_instructions.md.tmpl  redteam_mutate_bootstrap.md.tmpl  redteam_mutate_instructions.md.tmpl  tier2_bootstrap.md.tmpl  tier2_checklist.md.tmpl  tier2_output_schema.md.tmpl
docs/: architecture.html  install-demo.html
docs/_v1_archive/: ARCHITECTURE.md  ARCHITECTURE_RATIONALE.md  LLM_JUDGE_DESIGN.md  TIER_FLOWS.md
output/: agentshield-report.html
ppt/: AgentShield-Behavior-Emulator-v6.pptx  AgentShield-Behavior-Emulator-v7.pptx  AgentShield-Blueprint-and-Flow.pptx  agentshield-report.html
research/: research-notes.md
run/: EXECUTE_AGENTSHIELD.md  INSTALL.md  QUICKSTART.md  generate_copilot_prompts.ps1
testbed/: .gitignore
testbed/demo-agent/: .gitignore  README.md  SKILL.md  admin.py  config.py  config.yaml  controller.py  memory.py  notifications.py  orchestrator.py  sample-report-print.html  sample-report.html  sample-report.md  tier2-findings-stub.json  tools.py
testbed/mock-agent/: server.py
testbed/smartsdk-lambda/: README.md  requirements.txt
testbed/synthetic-vuln-java-app/: README.md
testbed/synthetic-vuln-python-app/: README.md
tests/: conftest.py  test_agent_emulator.py  test_attack_narratives.py  test_cli_exclude.py  test_coverage_universe.py  test_emitter.py  test_judge_bedrock.py  test_judge_mock.py  test_manifest_scanner.py  test_merger.py  test_normalizer.py  test_orchestrator.py  test_redteam_judge.py  test_redteam_mutate.py  test_reference.py  test_rules_golden.py  test_safety_policy.py  test_skills.py  test_target_adapter.py  test_tool_call_evidence.py  test_writers.py
(+161 files in other folders)
